--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@ repos:
 - repo: https://github.com/JohnnyMorganz/StyLua
   rev: v0.15.2
   hooks:
-  - id: stylua-github
+  - id: stylua-system
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v4.3.0
   hooks:
