--- a/wally.toml
+++ b/wally.toml
@@ -2,7 +2,7 @@
 name = "chreen/lars"
 description = "Lua 5.1 bytecode interpreter written in Luau"
 version = "0.1.0"
-license = "MIT"
+license = "GPL-3.0-or-later"
 authors = ["chreen <https://github.com/chreen>"]
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
